# ftpsync

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
npm/: build.mjs
npm/ftpsync/: README.md  package.json
src/: cli.rs  client.rs  config.rs  config_file.rs  error.rs  hasher.rs  ignore.rs  log.rs  main.rs  state.rs  sync.rs  walker.rs
