[package]
name = "ftpsync"
version = "0.1.0"
edition = "2021"
description = "Hash-based deploy tool over FTPS without SSH"
license = "MIT"

[dependencies]
suppaftp = { version = "6", features = ["async-rustls", "deprecated"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
walkdir = "2"
globset = "0.4"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
webpki-roots = "0.26"
futures = "0.3"
futures-rustls = "0.26"

[profile.release]
lto = true
codegen-units = 1
strip = true
